; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8188eu/hal/extr_bb_cfg.c_rtl_bb_delay.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8188eu/hal/extr_bb_cfg.c_rtl_bb_delay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { i32 }

@bMaskDWord = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.adapter*, i32, i32)* @rtl_bb_delay to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtl_bb_delay(%struct.adapter* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.adapter*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.adapter* %0, %struct.adapter** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp eq i32 %7, 254
  br i1 %8, label %9, label %11

9:                                                ; preds = %3
  %10 = call i32 @msleep(i32 50)
  br label %48

11:                                               ; preds = %3
  %12 = load i32, i32* %5, align 4
  %13 = icmp eq i32 %12, 253
  br i1 %13, label %14, label %16

14:                                               ; preds = %11
  %15 = call i32 @mdelay(i32 5)
  br label %47

16:                                               ; preds = %11
  %17 = load i32, i32* %5, align 4
  %18 = icmp eq i32 %17, 252
  br i1 %18, label %19, label %21

19:                                               ; preds = %16
  %20 = call i32 @mdelay(i32 1)
  br label %46

21:                                               ; preds = %16
  %22 = load i32, i32* %5, align 4
  %23 = icmp eq i32 %22, 251
  br i1 %23, label %24, label %26

24:                                               ; preds = %21
  %25 = call i32 @udelay(i32 50)
  br label %45

26:                                               ; preds = %21
  %27 = load i32, i32* %5, align 4
  %28 = icmp eq i32 %27, 250
  br i1 %28, label %29, label %31

29:                                               ; preds = %26
  %30 = call i32 @udelay(i32 5)
  br label %44

31:                                               ; preds = %26
  %32 = load i32, i32* %5, align 4
  %33 = icmp eq i32 %32, 249
  br i1 %33, label %34, label %36

34:                                               ; preds = %31
  %35 = call i32 @udelay(i32 1)
  br label %43

36:                                               ; preds = %31
  %37 = load %struct.adapter*, %struct.adapter** %4, align 8
  %38 = load i32, i32* %5, align 4
  %39 = load i32, i32* @bMaskDWord, align 4
  %40 = load i32, i32* %6, align 4
  %41 = call i32 @phy_set_bb_reg(%struct.adapter* %37, i32 %38, i32 %39, i32 %40)
  %42 = call i32 @udelay(i32 1)
  br label %43

43:                                               ; preds = %36, %34
  br label %44

44:                                               ; preds = %43, %29
  br label %45

45:                                               ; preds = %44, %24
  br label %46

46:                                               ; preds = %45, %19
  br label %47

47:                                               ; preds = %46, %14
  br label %48

48:                                               ; preds = %47, %9
  ret void
}

declare dso_local i32 @msleep(i32) #1

declare dso_local i32 @mdelay(i32) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @phy_set_bb_reg(%struct.adapter*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
